# legacy-code-01-team-merge-mishaps

./: .gitignore  .pre-commit-config.yaml  DONTREADME.md  README.md  main.py  pyproject.toml  requirements.txt
game/: main.py
game/scripts/: assets.py  const.py  env.py  game_input.py  interfaces.py  loaders.py
game/scripts/gameplay/: animation.py  block.py  button.py  camera.py  door.py  level.py  menu.py  physics.py  player.py  portal.py  sprite.py  sprite_controller.py  sprites_and_sounds.py
portaler/: assets.py  const.py  game_input.py  interfaces.py  loaders.py
portaler/assets/level/: tile_symbols.json
portaler/assets/level/levels/: 0.json  0.txt  2.json  2.txt  3.json  4.json  5.json  5.txt
portaler/gameplay/: animation.py  block.py  button.py  camera.py  door.py  level.py  lifter.py  physics.py  player.py  portal.py  sprites_and_sounds.py
pytmx/: README.md  __init__.py  project_loader.py
src/portaler/: assets.py  const.py  game_input.py  interfaces.py  loaders.py  main.py
src/portaler/assets/: levels.tiled-project
src/portaler/assets/level/levels/: 0.json  1.json  1.txt  2.json  2.txt  3.txt  4.json  4.txt  5.json  5.txt  6.json
src/portaler/assets/levels/: base.tmx
src/portaler/gameplay/: animation.py  block.py  button.py  camera.py  door.py  level.py  menu.py  physics.py  player.py  portal.py  sprite.py  sprites_and_sounds.py
src/portaler/scripts/: interfaces.py
src/portaler/scripts/gameplay/: block.py  button.py  level.py  player.py  sprites_and_sounds.py
