[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "portaler"
version = "0.0.1"
authors = [
    { name = "JiffyRob" },
    { name = "YeatsAiden" },
    { name = "gresm" },
    { name = "AndreyVarvar" },
    { name = "Matiiss" },
    { name = "aatle" },
]
description = ""
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["pygame-ce"]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
]

[project.urls]
Homepage = "https://github.com/pygame-examples/legacy-code-01-team-merge-mishaps"
Issues = "https://github.com/pygame-examples/legacy-code-01-team-merge-mishaps/issues"


[tool.pylint.main]
disable = ["all"]
enable = ["attribute-defined-outside-init"]


[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "C901"]

[tool.ruff.lint.isort]
combine-as-imports = true


[tool.mypy]
enable_error_code = [
    "possibly-undefined",
    "redundant-expr",
    "truthy-bool",
    "truthy-iterable",
    "ignore-without-code",
    "redundant-self",
    "unused-ignore",
    "unimported-reveal",
    "deprecated",
]
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
warn_incomplete_stub = true
local_partial_types = true
no_implicit_reexport = true
strict_equality = true
check_untyped_defs = true
extra_checks = true
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
